--- a/src/index.mdx
+++ b/src/index.mdx
@@ -4,18 +4,24 @@ route: /
 order: 1
 ---
 
-# Getting Started
+# Hawkeye Arrow
 
-Design systems enable teams to build better products faster by making design reusable—reusability makes scale possible. This is the heart and primary value of design systems. A design system is a collection of reusable components, guided by clear standards, that can be assembled together to build any number of applications.
+使用 TypeScript 构建，基于 Ant.Design 开发的企业中后台高级组件库。
 
-Regardless of the technologies and tools behind them, a successful design system follows these guiding principles:
+## 安装
 
-- **It’s consistent**. The way components are built and managed follows a predictable pattern.
-- **It’s self-contained**. Your design system is treated as a standalone dependency.
-- **It’s reusable**. You’ve built components so they can be reused in many contexts.
-- **It’s accessible**. Applications built with your design system are usable by as many people as possible, no matter how they access the web.
-- **It’s robust**. No matter the product or platform to which your design system is applied, it should perform with grace and minimal bugs.
+使用 npm 安装：
 
-## Consistency
+```bash
+$ npm install hawkeye-arrow
+```
 
-Your first, most important task when starting out is to define the rules of your system, document them, and ensure that everyone follows them. When you have clearly documented code standards and best practices in place, designers and developers from across your organization can easily use and, more importantly, contribute to your design system.
+或使用 yarn 安装： 
+
+```bash
+$ yarn add hawkeye-arrow
+```
+
+## 链接
+
+- 文档由 [docz](https://www.docz.site/) 构建
