--- a/src/ImageUpload/index.mdx
+++ b/src/ImageUpload/index.mdx
@@ -1,7 +1,6 @@
 ---
-name: ImageUpload
-menu: Components
-order: 1
+name: ImageUpload 图片上传
+menu: DataEntry
 ---
 
 import { Playground, PropsTable } from 'docz'
