--- a/src/ImageUpload/index.mdx
+++ b/src/ImageUpload/index.mdx
@@ -1,7 +1,7 @@
 ---
 name: ImageUpload 图片上传
 route: /components/imageUpload
-menu: DataEntry
+menu: 组件
 ---
 
 import { Playground, PropsTable } from 'docz'
