--- a/src/index.mdx
+++ b/src/index.mdx
@@ -12,13 +12,11 @@ order: 100
 
 使用 npm 安装：
 
-```bash
+``` bash
+# npm
 $ npm install hawkeye-arrow
-```
 
-或使用 yarn 安装： 
-
-```bash
+# yarn
 $ yarn add hawkeye-arrow
 ```
 
