--- a/src/complex/ImageUpload/index.mdx
+++ b/src/complex/ImageUpload/index.mdx
@@ -1,7 +1,7 @@
 ---
 name: ImageUpload 图片上传
-route: /components/imageUpload
-menu: 组件
+route: /components/complex/imageUpload
+menu: Complex Components
 ---
 
 import { Playground, PropsTable } from 'docz'
