--- a/src/complex/SearchBar/index.mdx
+++ b/src/complex/SearchBar/index.mdx
@@ -1,7 +1,7 @@
 ---
 name: SearchBar 搜索框
-route: /components/searchBar
-menu: 组件
+route: /components/complex/searchBar
+menu: Complex Components
 ---
 
 import { Playground, PropsTable } from 'docz'
