--- a/src/complex/SearchBar/index.mdx
+++ b/src/complex/SearchBar/index.mdx
@@ -7,10 +7,11 @@ menu: Complex Components
 import { Playground, PropsTable } from 'docz'
 import { Form, Button } from 'antd'
 import { SearchBar } from 'hawkeye-arrow'
+import { SearchBarProps } from './iSearchBar'
 
 # SearchBar
 
-内部使用 `Form`。
+内部使用`Form`构建的`SearchBar`。
 
 ## 基本用法
 
@@ -24,15 +25,42 @@ import { SearchBar } from 'hawkeye-arrow'
     fields={[{
       type: 'input',
       key: 'name',
-      title: '名称',
+      title: '姓名',
+    }, {
+      type: 'select',
+      key: 'type',
+      title: '国籍',
+      items: [{ value: 1, mean: '中国' }, { value: 2, mean: '英国' }]
+    }]} 
+  />
+</Playground>
+
+## 输入项 校验/联动
+
+输入`名称`重置`性别`，校验`名称`输入是否符合规则。
+
+`rules`的规范与`Form`中的`rules`一致。
+
+<Playground>
+  <SearchBar
+    onSearch={(values) => {
+      console.log(values)
+    }}
+    fields={[{
+      type: 'input',
+      key: 'name',
+      title: '姓名',
       rules: [{
-        required: true
+        required: true, message: '姓名必填',
+      }, {
+        max: 4, message: '姓名最大长度为4个字符'
       }],
       onChange: (form) => form.resetFields(['sex'])
     }, {
       type: 'select',
       key: 'sex',
       title: '性别',
+      initialValue: 1,
       items: [{ value: 1, mean: '男' }, { value: 2, mean: '女' }]
     }]} 
   />
