--- a/src/complex/SearchBar/index.mdx
+++ b/src/complex/SearchBar/index.mdx
@@ -30,7 +30,10 @@ import { SearchBarProps } from './iSearchBar'
       type: 'select',
       key: 'type',
       title: '国籍',
-      items: [{ value: 1, mean: '中国' }, { value: 2, mean: '英国' }]
+      items: [{ value: 1, mean: '中华人民共和国' }, { value: 2, mean: '美利坚合众国' }],
+      style: {
+        width: 200
+      }
     }]} 
   />
 </Playground>
