--- a/src/complex/SearchBar/index.mdx
+++ b/src/complex/SearchBar/index.mdx
@@ -69,7 +69,7 @@ import { SearchBarProps } from './iSearchBar'
   />
 </Playground>
 
-## 支持多种类型组件
+## 支持多种 Ant.Design 组件及自定义组件
 
 <Playground>
   <SearchBar
