--- a/src/basic/Button/index.mdx
+++ b/src/basic/Button/index.mdx
@@ -5,17 +5,65 @@ menu: Basic Components
 ---
 import { Playground, PropsTable } from 'docz'
 
-import { Ant, Button } from 'hawkeye-arrow'
+import { Ant, Button, Box } from 'hawkeye-arrow'
 
 # Button
 
 Button 组件
 
-## 基本用法
+## 类型
+
+主按钮在统一操作区域最多出现一次
 
 <Playground>
-  <Button type="primary">Primary</Button>
-  <Button>Default</Button>
-  <Button type="dashed">Dashed</Button>
-  <Button type="danger">Danger</Button>
+  <Box>
+    <Button type="primary">主按钮</Button>
+    <Button type="secondary">次按钮</Button>
+    <Button>弱按钮</Button>
+    <Button disabled>禁用按钮</Button>
+  </Box>
+</Playground>
+
+## 尺寸
+
+3种尺寸，S、M、L 
+
+S：小尺寸，高度为28px，宽度自适应，min-width为48px，padding为8px 
+
+M：正常按钮，高度为32px，宽度自适应，min-width为64px，padding为16px 
+
+L：大尺寸，高度为40px，宽度自适应，min-width为80px，padding为16px，一般用于全局操作
+
+<Playground>
+  <Box>
+    <Button type="primary" size="small">小型</Button>
+    <Button type="primary" size="small">三个字</Button>
+    <Button type="primary" size="small">四个文字</Button>
+  </Box>
+  <Box>
+    <Button type="primary" size="small">正常</Button>
+    <Button type="primary" size="small">三个字</Button>
+    <Button type="primary" size="small">四个文字</Button>
+  </Box>
+  <Box>
+    <Button type="primary" size="large">大型</Button>
+    <Button type="primary" size="large">三个字</Button>
+    <Button type="primary" size="large">四个文字</Button>
+  </Box>
+</Playground>
+
+## 加载中
+
+点击按钮后进行数据加载操作，在按钮上显示加载状态。
+
+<Playground>
+  <Button type="primary" loading>确认</Button>
+</Playground>
+
+## 图标按钮
+
+具有图标的按钮。
+
+<Playground>
+  <Button type="primary" icon="search">搜索</Button>
 </Playground>
