--- a/src/markdown/组件编写规范.md
+++ b/src/markdown/组件编写规范.md
@@ -6,7 +6,7 @@
 
 由于`Ant.Design`使用`less`写样式，所以新增`styles`文件夹，并在其中修改默认样式。
 
-自定义的组件建议使用`styled-components`写样式。
+自定义的组件建议使用`styled-components`编写样式。
 
 ### 组件结构
 
