--- a/src/markdown/组件编写规范.md
+++ b/src/markdown/组件编写规范.md
@@ -6,7 +6,7 @@
 
 由于`Ant.Design`使用`less`写样式，所以新增`styles`文件夹，并在其中修改默认样式。
 
-自定义的组件建议使用`styled-components`编写样式。
+自定义的组件建议使用`emotion`编写样式。(待确认)
 
 ### 组件结构
 
@@ -26,7 +26,7 @@
 - index.mdx: 组件文档，在这里明确组件的各种使用场景以及相关示例；
 - index.tsx: 组件入口；
 - iDemo.ts: 组件接口定义，如`interface`, `enum`等；
-- styled.ts: 组件样式，期望通过`styled-components`编写组件样式。
+- styled.ts: 组件样式，期望通过`emotion`编写组件样式。
 
 ## 备注
 
