feat: migrate to new version

--- a/docs/Getting started.mdx
+++ b/docs/Getting started.mdx
@@ -4,13 +4,13 @@ route: /
 order: 1000
 ---
 
-# Hawkeye Arrow
+# GCD
 
-使用 TypeScript 构建，基于 Ant.Design 开发的企业中后台高级组件库。
+Generate Components Documents.
 
 ## 安装
 
-使用 npm 安装：
+use npm to install：
 
 ``` bash
 # npm
