--- a/scripts/shot/template/complex/index.mdx
+++ b/scripts/shot/template/complex/index.mdx
@@ -4,9 +4,8 @@ route: /components/complex/COMPONENT_NAME
 menu: Complex Components
 ---
 
-import { Playground, PropsTable } from 'docz'
-import { Form, Button } from 'antd'
-import { SearchBar } from 'hawkeye-arrow'
+import { Playground, Props } from 'docz'
+import { COMPONENT_NAME } from './index'
 
 # COMPONENT_NAME
 
@@ -22,4 +21,4 @@ awesome COMPONENT_NAME
 
 ## API
 
-<PropsTable of={SearchBar} />
+<Props of={SearchBar} />
